# chad-engine

./: CMakeLists.txt  README.md
gaia-ecs/: gaia.h
gaia-ecs/gaia/config/: version.h
gaia-ecs/gaia/ecs/: archetype.h  chunk.h  chunk_allocator.h  chunk_header.h  command_buffer.h  query.h  world.h
gaia-ecs/gaia/mem/: data_layout_policy.h
src/Core/: CMakeLists.txt  Defines.h  Game.cpp  Game.h  ISceneLoader.h  Scene.cpp  Scene.h
src/Core/Components/: Camera.h  Collider.h  Light.h  MeshRenderer.h  Rigidbody.h  Transform.h
