cmake_minimum_required(VERSION 3.21)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(TARGET ENGINE)
	return()
endif()

set(GLM_BINARY_DIR C:/Packages/glm-release)

project(ENGINE LANGUAGES CXX)

set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(GAIA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/gaia-ecs)

add_subdirectory(${SRC_DIR})

add_library(ENGINE INTERFACE)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
